--- a/client/src/index.css
+++ b/client/src/index.css
@@ -48,3 +48,18 @@ button {
   padding: 30px;
   align-items: center;
 }
+.errors {
+  display: none;
+  flex-wrap: wrap;
+  padding: 40px;
+  padding-left: 100px;
+  padding-right: 100px;
+  max-width: 500px;
+  border: 2px solid black;
+  background-color: orangered;
+  border-radius: 10px;
+}
+.error-container {
+  display: flex;
+  justify-content: center;
+}
