--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,6 +8,9 @@
   background-color: orange;
   justify-content: center;
   height: 50px;
+  position: fixed;
+  top: 0px;
+  width: 100%;
 }
 .login-form {
   display: flex;
