--- a/client/src/index.css
+++ b/client/src/index.css
@@ -142,7 +142,9 @@ ul {
   background-size: cover;
 } */
 body {
-  background: url(https://media.istockphoto.com/photos/draught-beer-in-glasses-picture-id1040303026?k=6&m=1040303026&s=612x612&w=0&h=ZlIJgK1QAz9KvSo-0i43yDkbgUv-gRRKZQHErr7ZmOc=)
+  /* background: url(https://media.istockphoto.com/photos/draught-beer-in-glasses-picture-id1040303026?k=6&m=1040303026&s=612x612&w=0&h=ZlIJgK1QAz9KvSo-0i43yDkbgUv-gRRKZQHErr7ZmOc=)
+    no-repeat center center fixed; */
+  background: url(https://thumbor.thedailymeal.com/AXjKZTT1B2_avj41MMhaOycirA8=/870x565/https://www.thedailymeal.com/sites/default/files/slideshows/1871062/2218930/iStock-854848732.jpg)
     no-repeat center center fixed;
   opacity: 1;
   -moz-background-size: cover;
