--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,9 +14,10 @@
 }
 .login-form {
   display: flex;
-  max-width: 200px;
+  width: 300px;
   flex-wrap: wrap;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   padding: 30px;
   border: 2px solid orange;
   box-shadow: 2px 2px;
@@ -60,17 +61,23 @@ button {
 .errors {
   display: none;
   flex-wrap: wrap;
-  padding: 40px;
-  padding-left: 100px;
-  padding-right: 100px;
-  max-width: 500px;
+  top: 10%;
+  left: 10%;
+  margin-top: 80px;
+  padding: 20px;
+  max-width: 300px;
   border: 2px solid black;
   background-color: orangered;
   border-radius: 10px;
+  position: fixed;
+  top: 20px;
+  right: 0%;
+  z-index: 5;
 }
 .error-container {
   display: flex;
   justify-content: center;
+  position: absolute;
 }
 .add-review-form-div {
   display: flex;
