--- a/client/src/index.css
+++ b/client/src/index.css
@@ -88,7 +88,7 @@ button {
   position: fixed;
   right: 50px;
   top: 100px;
-  max-width: 400px;
+  max-width: 30%;
   border: 2px solid orange;
   box-shadow: 2px 2px;
   border-radius: 10px;
@@ -104,13 +104,16 @@ button {
   padding: 10px;
 }
 .feed-div {
-  padding-left: 0px;
-  padding-top: 50px;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-top: 100px;
   display: flex;
   flex-direction: column;
   max-width: 50%;
   align-items: center;
   align-content: center;
+  border: 2px solid orange;
+  background-color: white;
 }
 .logout-div {
   position: fixed;
@@ -118,23 +121,22 @@ button {
   right: 5px;
 }
 
-.homepage-div {
+/* .homepage-div {
   display: flex;
   flex-direction: column;
-}
+} */
 li {
-  width: 350px;
   padding: 20px;
-  border: 2px solid orange;
-  box-shadow: 2px 2px;
-  border-radius: 10px;
-  background-color: white;
-  margin: 20px;
+  border-bottom: 2px solid orange;
+  max-width: 95%;
   list-style: none;
 }
 ul {
+  display: flex;
+  flex-direction: column;
   text-align: center;
-  align-content: center;
+  justify-content: center;
+  margin: 0px;
 }
 .feed-buttons {
   display: flex;
@@ -149,7 +151,7 @@ ul {
   -o-background-size: cover;
   background-size: cover;
 } */
-body {
+.login-page {
   /* background: url(https://media.istockphoto.com/photos/draught-beer-in-glasses-picture-id1040303026?k=6&m=1040303026&s=612x612&w=0&h=ZlIJgK1QAz9KvSo-0i43yDkbgUv-gRRKZQHErr7ZmOc=)
     no-repeat center center fixed; */
   background: url(https://thumbor.thedailymeal.com/AXjKZTT1B2_avj41MMhaOycirA8=/870x565/https://www.thedailymeal.com/sites/default/files/slideshows/1871062/2218930/iStock-854848732.jpg)
@@ -165,4 +167,7 @@ body {
 p {
   font-weight: bolder;
   font-family: Arial, Helvetica, sans-serif;
+}
+#body {
+  background-color: rgb(250, 220, 178);
 }
