--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,11 +6,23 @@
   font-weight: bold;
   font-size: 30px;
   background-color: orange;
-  justify-content: center;
   height: 50px;
   position: fixed;
   top: 0px;
   width: 100%;
+  padding-left: 20px;
+}
+.page-header-login {
+  display: flex;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 30px;
+  background-color: orange;
+  height: 50px;
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  justify-content: center;
 }
 .login-form {
   display: flex;
@@ -32,11 +44,11 @@
 button {
   padding: 5px;
   display: flex;
-  color: black;
-  background-color: orange;
+  color: white;
+  background-color: grey;
   font-weight: bold;
-  border-radius: 10px;
   align-items: center;
+  margin: 5px;
 }
 .log-in-button-div {
   padding-top: 10px;
@@ -86,8 +98,8 @@ button {
   right: 50px;
   top: 100px;
   max-width: 30%;
-  border: 2px solid orange;
-  box-shadow: 2px 2px;
+  border: 1px solid grey;
+  box-shadow: 1px 1px;
   border-radius: 10px;
   background-color: white;
 }
@@ -109,7 +121,7 @@ button {
   max-width: 50%;
   align-items: center;
   align-content: center;
-  border: 2px solid orange;
+  border: 1px solid grey;
   background-color: white;
 }
 .logout-div {
@@ -124,7 +136,8 @@ button {
 } */
 li {
   padding: 20px;
-  border-bottom: 2px solid orange;
+  border-bottom: 1px solid grey;
+  color: orange;
   max-width: 95%;
   list-style: none;
 }
@@ -134,6 +147,7 @@ ul {
   text-align: center;
   justify-content: center;
   margin: 0px;
+  padding-inline-start: 0px;
 }
 .feed-buttons {
   display: flex;
@@ -177,11 +191,20 @@ p {
   right: 100px;
   top: 500px;
   max-width: 30%;
-  border: 2px solid orange;
-  box-shadow: 2px 2px;
+  border: 1px solid grey;
+  box-shadow: 1px 1px;
   border-radius: 10px;
   background-color: white;
 }
 .hidden {
   display: none;
+}
+#feed-title {
+  font-weight: bold;
+  font-size: 150%;
+  position: relative;
+  text-align: left;
+  width: 90%;
+  margin-left: 20px;
+  border-bottom: 1px solid grey;
 }
