--- a/client/src/index.css
+++ b/client/src/index.css
@@ -180,7 +180,7 @@ p {
   font-family: Arial, Helvetica, sans-serif;
 }
 #body {
-  background-color: rgb(250, 220, 178);
+  background-color: #f5f2e8;
 }
 #user-tile {
   display: flex;
