--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,7 @@
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
   font-size: 30px;
-  background-color: orange;
+  background-color: #ffcc00;
   height: 50px;
   position: fixed;
   top: 0px;
@@ -17,7 +17,7 @@
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
   font-size: 30px;
-  background-color: orange;
+  background-color: #ffcc00;
   height: 50px;
   position: fixed;
   top: 0px;
@@ -34,12 +34,13 @@
   border: 2px solid orange;
   box-shadow: 2px 2px;
   border-radius: 10px;
-  background-color: rgb(228, 164, 46);
+  background-color: #ffcc00;
 }
+
 .login-form-div {
   display: flex;
   justify-content: center;
-  padding: 200px;
+  padding: 350px;
 }
 button {
   padding: 5px;
@@ -62,7 +63,7 @@ button {
 .no-account {
   display: flex;
   justify-content: space-evenly;
-  background-color: orange;
+  background-color: #ffcc00;
   opacity: 0.7;
   padding: 30px;
   align-items: center;
@@ -77,7 +78,7 @@ button {
   padding: 20px;
   max-width: 400px;
   border: 2px solid black;
-  background-color: orangered;
+  background-color: #ce442c;
   border-radius: 10px;
   position: absolute;
   z-index: 5;
