--- a/client/src/index.css
+++ b/client/src/index.css
@@ -87,8 +87,9 @@ button {
   display: flex;
   justify-content: center;
   position: absolute;
-  top: 40%;
-  right: 50%;
+  top: 1%;
+  left: 39%;
+  width: 400px;
 }
 .add-review-form-div {
   display: flex;
