--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,7 @@
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
   font-size: 30px;
+  color: white;
   background-color: #ffcc00;
   height: 50px;
   position: fixed;
@@ -110,7 +111,7 @@ button {
   justify-content: center;
 }
 .logout-button-div {
-  padding: 10px;
+  padding: 5px;
 }
 .feed-div {
   margin-left: 5%;
